Development (#8)
* Changed from messages from English to Spanish

* adding new changes

* refactoring code to work examType should has its items

* adding price for each item

* adding logic to create a request from internal users

* adding logic to not repeat the same item to be associated many times

* fixing bug

* adding logic to avoid nullpointer

* adding logic to not retrieve items when samplitem is deleted

* deleting sample logic

* adding filter to avoid returning samples deleted

* adding logic to handle stage change and assigments in the same endpoint

* adding logic to send general information for pdf

* fixing bugs

* adding logic to create war files'

* adding logic to protect the apis

* adding triggers logic

* adding new changes

* adding logic to return modules and authorities into authWrapper

* adding logic to check if the pdf its content is empty

* adding new changes

* Feat:  backend completed

---------

Co-authored-by: Silvia <silviacotzajay@gmail.com>
Co-authored-by: sergiomendez2 <sergio.mendez2@telusinternational.com>
Co-authored-by: sergio-mendez-gonzalez-telus <sergio.mendezgonzalez@telus.com>