@@ -6,12 +6,9 @@ import com.example.finalprojectbackend.lab2you.db.model.dto.RequestDTO;
 import com.example.finalprojectbackend.lab2you.db.model.entities.*;
 import com.example.finalprojectbackend.lab2you.db.model.wrappers.*;
 import com.example.finalprojectbackend.lab2you.db.repository.RequestRepository;
-import com.example.finalprojectbackend.lab2you.service.catalogservice.ExamTypeService;
+import com.example.finalprojectbackend.lab2you.service.catalogservice.ItemService;
 import com.example.finalprojectbackend.lab2you.service.catalogservice.SupportTypeService;
 import org.springframework.stereotype.Service;
-
-import java.time.LocalDateTime;
-import java.time.ZoneId;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -23,13 +20,13 @@ public class RequestService extends CrudServiceProcessingController<RequestEntit
     private final SupportTypeService supportTypeService;
     private ResponseWrapper responseWrapper;
 
-    private final ExamTypeService examTypeService;
+    private final ItemService itemService;
 
     private final AssigmentService assigmentService;
 
-    public RequestService(RequestRepository requestRepository, ExamTypeService examTypeService, SupportTypeService supportTypeService, AssigmentService assigmentService) {
+    public RequestService(RequestRepository requestRepository, ItemService itemService, SupportTypeService supportTypeService, AssigmentService assigmentService) {
         this.requestRepository = requestRepository;
-        this.examTypeService = examTypeService;
+        this.itemService = itemService;
         this.supportTypeService = supportTypeService;
         this.assigmentService = assigmentService;
     }
@@ -51,18 +48,25 @@ public class RequestService extends CrudServiceProcessingController<RequestEntit
     public ResponseWrapper executeDeleteById(RequestEntity entity) {
         entity.setDeleted(true);
 
-        entity.getRequestDetails().forEach(requestDetailEntity -> requestDetailEntity.setIsDeleted(true));
-
         if (!entity.getRequestDetails().isEmpty()) {
-
             entity.getRequestDetails()
-                    .forEach(requestDetailEntity -> requestDetailEntity.getSample()
-                            .forEach(sampleEntity -> sampleEntity.getSampleItemEntities()
-                                    .forEach(sampleItemEntity -> sampleItemEntity.setDeleted(true))));
+                    .forEach(requestDetailEntity -> {
+                        requestDetailEntity.setIsDeleted(true);
+                        requestDetailEntity.setUpdatedBy(entity.getUpdatedBy());
+                    });
+        }
 
-            entity.getRequestDetails()
-                    .forEach(requestDetailEntity -> requestDetailEntity.getSample()
-                            .forEach(sampleEntity -> sampleEntity.setDeleted(true)));
+        if (!entity.getSamples().isEmpty()) {
+            entity.getSamples().forEach(sampleEntity -> {
+                sampleEntity.setDeleted(true);
+                sampleEntity.setUpdatedBy(entity.getUpdatedBy());
+            });
+            entity.getSamples().forEach(sampleEntity -> sampleEntity.getSampleItemEntities()
+                    .forEach(sampleItemEntity ->
+                    {
+                        sampleItemEntity.setDeleted(true);
+                        sampleItemEntity.setUpdatedBy(entity.getUpdatedBy());
+                    }));
         }
 
         requestRepository.save(entity);
@@ -82,9 +86,31 @@ public class RequestService extends CrudServiceProcessingController<RequestEntit
                 .collect(Collectors.toList());
 
         responseWrapper.setSuccessful(true);
-        responseWrapper.setMessage("requests retrieved successfully");
+        responseWrapper.setMessage("solicitudes recuperadas exitosamente");
         responseWrapper.setData(requestWrappers);
 
+        return responseWrapper;
+    }
+    public ResponseWrapper executeReadAllFilteredByRolAndAssigment(String role, Long employeeId) {
+        responseWrapper = new ResponseWrapper();
+        List<RequestEntity> requestEntities = new ArrayList<>();
+        List<AssignmentEntity> allByAssignedToEmployeeId = assigmentService.findAllByAssignedToEmployeeId(employeeId);
+        allByAssignedToEmployeeId.sort(Comparator.comparing(AssignmentEntity::getAssignationDate).reversed());
+        allByAssignedToEmployeeId.forEach(
+
+                assignmentEntity -> {
+                    if (assignmentEntity.isCurrentAssignment()) {
+                        requestEntities.add(assignmentEntity.getRequest());
+                    }
+                });
+
+        List<RequestWrapper> requestWrappers = requestEntities.stream()
+                .map(this::mapToRequestWrapper)
+                .collect(Collectors.toList());
+
+        responseWrapper.setSuccessful(true);
+        responseWrapper.setMessage("solicitudes recuperadas exitosamente");
+        responseWrapper.setData(requestWrappers);
         return responseWrapper;
     }
 
@@ -96,7 +122,7 @@ public class RequestService extends CrudServiceProcessingController<RequestEntit
         }
 
         if (entity.getRequestDetails().isEmpty()) {
-            responseWrapper.addError("requestDetails", "el requestDetails solicitado no debe de ser nulo");
+            responseWrapper.addError("requestDetails", "la solicitud debe de tener al menos un item");
         }
         if (Lab2YouUtils.isObjectNullOrEmpty(entity.getSupportType())) {
             responseWrapper.addError("supportType", "el tipo de soporte solicitado no debe de ser nulo");
@@ -150,22 +176,19 @@ public class RequestService extends CrudServiceProcessingController<RequestEntit
 
     public RequestEntity mapToRequestEntity(RequestDTO requestDTO) {
         RequestEntity requestEntity = new RequestEntity();
-        List<String> examNames = new ArrayList<>();
-        requestDTO.getExamType().forEach(examTypeDTO -> examNames.add(examTypeDTO.getName()));
+        List<String> itemNames = new ArrayList<>();
+        requestDTO.getItems().forEach(item -> itemNames.add(item.getName()));
         requestEntity.setSupportNumber(requestDTO.getSupportNumber());
         requestEntity.setEmail(requestDTO.getEmail());
         requestEntity.setRemark(requestDTO.getRemark());
-        LocalDateTime localDateTime = LocalDateTime.now();
-        Date date = Date.from(localDateTime.atZone(ZoneId.systemDefault()).toInstant());
-        requestEntity.setRequestCode(Lab2YouUtils.generateRequestCode(date));
         SupportTypeEntity supportTypeEntity = supportTypeService.getSupportByName(requestDTO.getSupportType().getName());
-        List<ExamTypeEntity> examTypes = examTypeService.findExamByNames(examNames);
-        examTypes.forEach(requestEntity::addExamType);
+        List<ItemEntity> items = itemService.findItemByNames(itemNames);
+        items.forEach(requestEntity::addItem);
         requestEntity.setSupportType(supportTypeEntity);
         return requestEntity;
     }
 
-    private RequestWrapper mapToRequestWrapper(RequestEntity requestEntity) {
+    public RequestWrapper mapToRequestWrapper(RequestEntity requestEntity) {
         RequestWrapper requestWrapper = new RequestWrapper();
         requestWrapper.setId(requestEntity.getId());
         requestWrapper.setRequestCode(requestEntity.getRequestCode());
@@ -216,22 +239,18 @@ public class RequestService extends CrudServiceProcessingController<RequestEntit
         return responseWrapper;
     }
 
-    public ResponseWrapper getAllExamsByRequestId(Long id) {
+    public Map<String, List<RequestDetailWrapper>> getAllExamItemsByRequestId(Long id) {
         List<RequestDetailEntity> requestDetailEntities = requestRepository.findDetailsByRequestId(id)
                 .stream()
-                .filter(requestDetailEntity -> !requestDetailEntity.getIsDeleted())
+                .filter(requestDetailEntity -> !requestDetailEntity.getIsDeleted() && !requestDetailEntity.getIsAssociated())
                 .toList();
 
         List<RequestDetailWrapper> requestDetailWrappers = requestDetailEntities.stream()
                 .map(this::mapToRequestDetailWrapper)
-                .collect(Collectors.toList());
+                .toList();
 
-        responseWrapper = new ResponseWrapper();
-        responseWrapper.setSuccessful(true);
-        responseWrapper.setMessage("Exams found");
-        responseWrapper.setData(requestDetailWrappers);
-        return responseWrapper;
-
+        return requestDetailWrappers.stream()
+                .collect(Collectors.groupingBy(requestDetailWrapper -> requestDetailWrapper.getItemWrapper().getExamType()));
     }
 
     public ResponseWrapperRequest<Map<String, String>> getGeneralInformationByRequestId(Long id) {
@@ -250,51 +269,19 @@ public class RequestService extends CrudServiceProcessingController<RequestEntit
     }
 
     public RequestDetailWrapper mapToRequestDetailWrapper(RequestDetailEntity requestDetail) {
-        ExamTypeWrapper examTypeWrapper = new ExamTypeWrapper();
-        examTypeWrapper.setId(requestDetail.getExamType().getId());
-        examTypeWrapper.setName(requestDetail.getExamType().getName());
-        examTypeWrapper.setDescription(requestDetail.getExamType().getDescription());
 
         RequestDetailWrapper requestDetailWrapper = new RequestDetailWrapper();
-        requestDetailWrapper.setId(requestDetail.getId());
-        requestDetailWrapper.setExamType(examTypeWrapper);
 
-        List<SampleWrapper> sampleWrappers = requestDetail.getSample().stream()
-                .filter(sampleEntity -> !sampleEntity.isDeleted())
-                .map(sampleEntity -> {
-                    SampleWrapper sampleWrapper = new SampleWrapper();
-                    sampleWrapper.setPresentation(sampleEntity.getPresentation());
-                    sampleWrapper.setQuantity(sampleEntity.getQuantity());
-                    sampleWrapper.setSampleType(new SampleTypeWrapper(
-                                    sampleEntity.getSampleTypeEntity().getId(),
-                                    sampleEntity.getSampleTypeEntity().getName(),
-                                    sampleEntity.getSampleTypeEntity().getDescription()
-                            )
-                    );
-                    sampleWrapper.setMeasureUnit(new MeasureUnitWrapper(
-                                    sampleEntity.getMeasureUnitEntity().getId(),
-                                    sampleEntity.getMeasureUnitEntity().getName(),
-                                    sampleEntity.getMeasureUnitEntity().getDescription()
-                            )
-                    );
-                    sampleWrapper.setExpirationDate(sampleEntity.getExpirationDate());
-                    sampleWrapper.setLabel(sampleEntity.getLabel());
-                    sampleWrapper.setId(sampleEntity.getId());
-                    sampleWrapper.setItems(sampleEntity.getSampleItemEntities().stream()
-                            .filter(sampleItemEntity -> {
-                                return !sampleItemEntity.isDeleted() && sampleEntity.getId().equals(sampleWrapper.getId());
-                            })
-                            .map(sampleItemEntity -> new ItemWrapper(
-                                    sampleItemEntity.getItem().getId(),
-                                    sampleItemEntity.getItem().getName(),
-                                    sampleItemEntity.getItem().getDescription()))
-                            .collect(Collectors.toList()));
-                    return sampleWrapper;
-                })
-                .collect(Collectors.toList());
-
-        requestDetailWrapper.getExamType().setSamples(sampleWrappers);
         requestDetailWrapper.setRequestId(requestDetail.getRequest().getId());
+        requestDetailWrapper.setId(requestDetail.getId());
+
+        ItemWrapper itemWrapper = new ItemWrapper();
+        itemWrapper.setId(requestDetail.getItem().getId());
+        itemWrapper.setName(requestDetail.getItem().getName());
+        itemWrapper.setDescription(requestDetail.getItem().getDescription());
+        itemWrapper.setPrice(requestDetail.getItem().getPrice());
+        itemWrapper.setExamType(requestDetail.getItem().getExamType().getName());
+        requestDetailWrapper.setItemWrapper(itemWrapper);
         return requestDetailWrapper;
     }
 
@@ -304,7 +291,7 @@ public class RequestService extends CrudServiceProcessingController<RequestEntit
         generalInformation.put("Código solicitud", requestDetail.getRequest().getRequestCode());
         generalInformation.put("No. expediente", requestDetail.getRequest().getRequestCode());
         generalInformation.put("Nit", requestDetail.getRequest().getCustomer().getNit());
-        generalInformation.put("No. soport", requestDetail.getRequest().getSupportNumber());
+        generalInformation.put("No. soporte", requestDetail.getRequest().getSupportNumber());
         generalInformation.put("Tipo soporte", requestDetail.getRequest().getSupportType().getName());
         generalInformation.put("Tipo solicitante", requestDetail.getRequest().getCustomer().getUser().getUserType());
         List<AssignmentEntity> assignmentEntities = assigmentService.findAllByRequestId(requestDetail.getRequest().getId());
@@ -330,6 +317,43 @@ public class RequestService extends CrudServiceProcessingController<RequestEntit
 
         return generalInformation;
     }
+
+    public RequestSampleItemWrapper mapToSampleItems(RequestEntity requestEntity) {
+        RequestSampleItemWrapper requestSampleItemWrapper = new RequestSampleItemWrapper();
+        requestSampleItemWrapper.setId(requestEntity.getId());
+        requestSampleItemWrapper.setSampleWrapper(requestEntity.getSamples().stream()
+                .filter(sampleEntity -> !sampleEntity.isDeleted())
+                .map(sampleEntity -> {
+                    SampleWrapper sampleWrapper = new SampleWrapper();
+                    sampleWrapper.setLabel(sampleEntity.getLabel());
+                    sampleWrapper.setId(sampleEntity.getId());
+                    sampleWrapper.setPresentation(sampleEntity.getPresentation());
+                    sampleWrapper.setQuantity(sampleEntity.getQuantity());
+                    sampleWrapper.setSampleType(
+                            new SampleTypeWrapper(sampleEntity.getSampleTypeEntity().getId(),
+                                    sampleEntity.getSampleTypeEntity().getName(),
+                                    sampleEntity.getSampleTypeEntity().getDescription()));
+
+                    sampleWrapper.setMeasureUnit(
+                            new MeasureUnitWrapper(sampleEntity.getMeasureUnitEntity().getId(),
+                                    sampleEntity.getMeasureUnitEntity().getName(),
+                                    sampleEntity.getMeasureUnitEntity().getDescription()));
+
+                    sampleWrapper.setItems(sampleEntity.getSampleItemEntities().stream()
+                            .filter(sampleItemEntity -> !sampleItemEntity.isDeleted())
+                            .map(sampleItemEntity -> {
+                                ItemWrapper itemWrapper = new ItemWrapper();
+                                itemWrapper.setId(sampleItemEntity.getRequestDetail().getItem().getId());
+                                itemWrapper.setName(sampleItemEntity.getRequestDetail().getItem().getName());
+                                itemWrapper.setDescription(sampleItemEntity.getRequestDetail().getItem().getDescription());
+                                itemWrapper.setExamType(sampleItemEntity.getRequestDetail().getItem().getExamType().getName());
+                                return itemWrapper;
+                            }).collect(Collectors.toList()));
+            return sampleWrapper;
+        }).collect(Collectors.toList()));
+        return requestSampleItemWrapper;
+    }
+
 
     @Override
     protected ResponseWrapper validateForRead(RequestEntity entity) {
